# cirque

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  config.yml  deny.toml  flake.nix
.github/workflows/: build.yml  chirc-testsuite.yml  irctest-testsuite.yml
assets/: default.yml
cirque/: .gitignore  Cargo.toml
cirque-core/: Cargo.toml
cirque-core/src/: client_to_server.rs  error.rs  lib.rs  message_writer.rs  nickname.rs  server_state.rs  server_to_client.rs  timeout.rs  types.rs  user_state.rs
cirque-parser/: Cargo.toml
cirque-parser/src/: lib.rs  parser.rs  stream.rs
cirque-server/: Cargo.toml
cirque-server/src/: connection_validator.rs  lib.rs  listener.rs  message_throttler.rs  server.rs  session.rs  stream.rs  transport.rs
cirque/src/: client_to_server.rs  config.rs  lib.rs  main.rs  message_pool.rs  message_writer.rs  server.rs  server_state.rs  server_to_client.rs  session.rs  transport.rs  types.rs
scripts/: launch_tu.py
tests/testsuite-chirc/: run.py
tests/testsuite-chirc/chirc-compat/: Cargo.toml
tests/testsuite-chirc/chirc-compat/src/: main.rs
tests/testsuite-irctest/: cirque.py  run.sh
tests/testsuite-irctest/irctest-compat/: Cargo.toml
tests/testsuite-irctest/irctest-compat/src/: main.rs
