[workspace]
resolver = "2"

members = [
    "cirque",
    "cirque-core",
    "cirque-parser",
    "cirque-server",
    "tests/testsuite-chirc/chirc-compat",
    "tests/testsuite-irctest/irctest-compat",
]

[workspace.lints.rust]
trivial_numeric_casts = "warn"
improper_ctypes = "warn"
improper_ctypes_definitions = "warn"
rust_2018_idioms = "warn"
rust_2024_compatibility = "warn"
single_use_lifetimes = "warn"

[workspace.lints.clippy]
#unwrap_used = "warn"
expect_used = "warn"
#indexing_slicing = "warn"
#panic = "warn"
#panic_in_result_fn = "warn"
dbg_macro = "warn"
print_stderr = "warn"
print_stdout = "warn"
todo = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unimplemented = "warn"
cast_lossless = "warn"
trailing_empty_array = "warn"
as_ptr_cast_mut = "warn"
lint_groups_priority = "allow"
