[package]
name = "cirque-core"
version = "0.1.0"
license = "MIT"
edition = "2024"

[dependencies]
tokio = { version = "1.39.0",features = ["rt-multi-thread", "macros", "net", "signal", "sync"] }
uuid = { version = "1.10.0", features = ["v4"] }
thiserror = "2.0.0"
decancer = { version = "3.2.4", default-features = false, features = [] }
parking_lot = "0.12.3"
log = "0.4.22"
subtle = "2.6.1"

cirque-parser = { path = "../cirque-parser" }
phf = { version = "0.11.2", features = ["macros", "unicase"] }
unicase = "2.7.0"

[lints]
workspace = true

