[package]
name = "cirque"
version = "0.1.0"
edition = "2021"
default-run = "cirque"

[dependencies]
anyhow = "1.0.86"
rustls-pemfile = "2.1.2"
tokio = { version = "1.39.0", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
    "sync",
] }
tokio-rustls = { version = "0.26", default-features = false, features = [
    "ring",
] }
yaml-rust2 = "0.8.1"
cirque-parser = { path = "../cirque-parser" }
uuid = { version = "1.10.0", features = ["v4"] }
thiserror = "1.0.63"
decancer = { version = "3.2.4", default-features = false, features = [] }

[dev-dependencies]
rstest = "0.21.0"
