[package]
name = "cirque"
version = "0.1.0"
license = "MIT"
edition = "2024"
default-run = "cirque"

[dependencies]
anyhow = "1.0.86"
serde = { version = "1.0.213", features = ["derive"] }
serde_yml = "0.0.12"
serde_with = "3.11.0"
tokio = { version = "1.39.0",features = ["macros", "net", "signal"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
log = "0.4.22"
pretty_env_logger = "0.5.0"

cirque-core = { path = "../cirque-core" }
cirque-server = { path = "../cirque-server" }

[lints]
workspace = true
