[package]
name = "irctest-compat"
version = "0.1.0"
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
tokio = { version = "1.39.2", features = ["full"] }

cirque-core = { path="../../../cirque-core" }
cirque-server = { path="../../../cirque-server" }

[lints]
workspace = true
